[css-transform-2] Failing to flatten due to some grouping properties
Categories
(Core :: Web Painting, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox86 | --- | fixed |
People
(Reporter: chrishtr, Assigned: mattwoodrow)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_15_7) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/89.0.4343.0 Safari/537.36
Steps to reproduce:
Failing WPT test:
css/css-transforms/preserve-3d-flat-grouping-properties.html
Also see:
https://bugs.chromium.org/p/chromium/issues/detail?id=1008483
Comment 1•5 years ago
|
||
Bugbug thinks this bug should belong to this component, but please revert this change in case of error.
Comment 2•5 years ago
|
||
Matt, do you know if there's a bug tracking the transforms compat stuff?
It seems the subtest that fails is just about isolation
.
Assignee | ||
Comment 4•5 years ago
|
||
I don't think we had a general meta bug for transforms issues, so I've filed one.
This code check for reasons why the used value of transform-style
might not be preserve-3d
: https://searchfox.org/mozilla-central/rev/23c25cd32a1e87095301273937b4ee162f41e860/layout/generic/nsIFrame.cpp#1796-1803
We want to include the check for isolation: isolate
there.
Assignee | ||
Comment 5•5 years ago
|
||
Updated•5 years ago
|
Comment 7•5 years ago
|
||
bugherder |
Description
•