Bug 1680863 - Set the used value of transform-style to flat if the element has mix-blend-mode or isolation. r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D99741